tests/Checker/everything/errors/18a.sol
======= The VC compiler =======

Pass 1: Lexical and syntactic Analysis
Pass 2: Semantic Analysis
ERROR: 0(0)..0(0): *18: array size missing
Compilation was unsuccessful.
